_sass/main.scss
/* ... */
.neumorphism-card-big {
  box-shadow: 5px 5px 4px #161718, -5px -5px 4px #404346;
  word-break: break-word
}

/* Preloader */

#preloader {
  align-items: center;
  background: $bg-color;
  display: flex;
  height: 100%;
  justify-content: center;
  left: 0;
  margin: 0.5rem;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  z-index: 999;

  .load {
    height: 6rem;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 6rem;
  }

  .load hr {
    animation: spin 2s ease infinite;
    border: 0;
    height: 40%;
    margin: 0;
    position: absolute;
    width: 40%;
  }

  .load :first-child {
    animation-delay: -1.5s;
    background: $text-color;
  }

  .load :nth-child(2) {
    animation-delay: -1s;
    background: $primary-color;
  }

  .load :nth-child(3) {
    animation-delay: -0.5s;
    background: $text-color;
  }

  .load :last-child {
    background: $primary-color;
  }

  @keyframes spin {
    0%,
    100% {
      transform: translate(0);
    }
    25% {
      transform: translate(160%);
    }
    50% {
      transform: translate(160%, 160%);
    }
    75% {
      transform: translate(0, 160%);
    }
  }
}

/* Footer */

.footer {
  background: $bg-color;
  color: $text-color;
  margin: 0.5rem;
  padding: 1rem;
  text-align: center;
}

.footer a {
  color: $primary-color;

  &:hover,
  &:focus {
    background: $bg-color;
    color: $text-color;
  }
}

.back-button {
  text-align: right;
  font-size: 0.75rem;
}

/* Landing Page */

#landing {
  background: $bg-color;
  color: $text-color;
  display: flex;
  height: 100%;
  margin: 0.5rem;
  padding: 0.5rem;
  text-align: center;
}

.landing-title {
  left: 0;
  margin: 0.5rem;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  top: 40%;
}

.landing-links {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.landing-icons {
  display: flex;
  justify-content: center;

  .social-link {
    color: $text-color;
    position: relative;
    height: 3rem;
    line-height: 3rem;
    margin: 0.25rem;
    width: 3rem;

    .circle {
      animation: outWaveOut 1s cubic-bezier(0.42, 0, 0.58, 1) forwards;
      fill: none;
      stroke-dasharray: 40;
      transition: all 0.2s ease-in-out;
    }

    .social {
      font-size: 1.5rem;
      position: absolute;
      top: 0px;
      transition: all 0.5s ease-in-out;
      width: 100%;
    }

    .social-svg {
      fill: white;
    }

    .label {
      display: none;
    }

    &:hover {
      cursor: pointer;

      .circle {
        animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
          colorBlackIcon 1s linear forwards;
        fill: $text-color;
        fill-opacity: 1;
      }

      .social-svg {
        fill: #000;
      }

      .label {
        display: unset !important;
        position: relative;
        top: -2rem;
      }
    }
  }

  .email:hover {
    .circle {
      animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
        colorEmail 1s linear forwards;
    }
    .social-svg {
      fill: #d44638;
    }
  }

  .linkedin:hover {
    .circle {
      animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
        colorLinkedin 1s linear forwards;
    }
    .social-svg {
      fill: #007bb6;
    }
  }

  .twitter:hover {
    .circle {
      animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
        colorTwitter 1s linear forwards;
    }
    .social-svg {
      fill: #1da1f2;
    }
  }

  @keyframes outWaveIn {
    to {
      stroke-dasharray: 510;
      stroke-width: 0.5rem;
    }
  }

  @keyframes outWaveOut {
    from {
      stroke: $text-color;
      stroke-dasharray: 510;
      stroke-width: 0.5rem;
    }
    to {
      stroke: $text-color;
      stroke-dasharray: 83;
      stroke-width: 0.5rem;
    }
  }

  @keyframes colorBlackIcon {
    to {
      stroke: #000;
    }
  }

  @keyframes colorEmail {
    to {
      stroke: #b23121;
    }
  }

  @keyframes colorLinkedin {
    to {
      stroke: #007bb6;
    }
  }

  @keyframes colorTwitter {
    to {
      stroke: #1da1f2;
    }
  }
}

/* Skills Section */

#skills {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  div {
    padding: 0.2rem;
    transition: opacity 0.5s;
  }

  div[skill-type="security"] {
    color: #e84a5f;
  }

  div[skill-type="technical"] {
    color: #ff847c;
  }

  div[skill-type="general"] {
    color: #fecea8;
  }

  div[skill-weight="1"] {
    font-size: 0.75rem;
    line-height: 0.25rem;
  }

  div[skill-weight="2"] {
    font-size: 1.25rem;
    line-height: 0.75rem;
  }

  div[skill-weight="3"] {
    font-size: 1.75rem;
    line-height: 1.25rem;
  }

  div[skill-weight="4"] {
    font-size: 2.25rem;
    line-height: 1.75rem;
  }

  div[skill-weight="5"] {
    font-size: 2.75rem;
    line-height: 2.25rem;
  }

  input[type="radio"] {
    display: none;
  }

  .filter-button {
    display: none;
  }
}
/* ... */

